--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <!-- 第一關：氣動發射 -->
   <div id="game1" class="game-panel active">
     <button id="hint1" class="hint-btn" title="提示">💡</button>
-    <h2>第一關：氣動發射（角度 + 氣壓 → 太空紙飛機）</h2>
+    <h2>第一關：氣動發射</h2>
     <canvas id="canvas1" width="800" height="300"></canvas>
     <div class="controls">
       <label>
@@ -230,7 +230,7 @@
   <!-- 第二關：動能傳遞 -->
   <div id="game2" class="game-panel">
     <button id="hint2" class="hint-btn" title="提示">💡</button>
-    <h2>第二關：動能傳遞（力道控制 → 太空滑車，一次定勝負）</h2>
+    <h2>第二關：動能傳遞</h2>
     <canvas id="canvas2" width="800" height="200"></canvas>
     <div class="controls">
       <button id="pushBtn" class="btn btn-primary">按住補充動能</button>
@@ -249,7 +249,7 @@
   <!-- 第三關：彈力點燈 -->
   <div id="game3" class="game-panel">
     <button id="hint3" class="hint-btn" title="提示">💡</button>
-    <h2>第三關：彈力點燈（拉力位能 → 啟動星際天象儀）</h2>
+    <h2>第三關：彈力點燈</h2>
     <canvas id="canvas3" width="800" height="300"></canvas>
     <div class="controls">
       <span>按住能量球，往後拉再放開發射，打中開關點亮星空。</span>
@@ -911,3 +911,4 @@
   </script>
 </body>
 </html>
+
